# darker

./: README.rst  constraints-oldest.txt  setup.cfg
.github/workflows/: python-package.yml
src/darker/: command_line.py  diff.py  git.py
