[metadata]
name = darker
author = Antti Kaihola
author_email = 13725+akaihola@users.noreply.github.com
summary = Apply Black formatting only in regions changed since last commit
description-file =
    README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/akaihola/darker
license = BSD
license_file = LICENSE.rst
requires-python = >=3.6
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source Code = https://github.com/akaihola/darker
    Change Log = https://github.com/akaihola/darker/blob/master/CHANGES.rst

[options]
install_requires =
    # NOTE: remember to keep `constraints-oldest.txt` in sync with these
    black>=21.5b1
    toml>=0.10.0
    typing-extensions ; python_version < "3.8"
    dataclasses ; python_version < "3.7"
# NOTE: remember to keep `.github/workflows/python-package.yml` in sync
#       with the minimum required Python version
python_requires = >=3.6

[files]
packages =
    darker
packages_root = src

[entry_points]
console_scripts =
    darker = darker.__main__:main_with_error_handling
pygments.lexers =
    lint_location = darker.highlighting.lexers:LocationLexer
    lint_description = darker.highlighting.lexers:DescriptionLexer

[options.extras_require]
isort =
    isort>=5.0.1
test =
    # NOTE: remember to keep `constraints-oldest.txt` in sync with these
    black>=21.7b1  # to prevent Mypy error about `gen_python_files`, see issue #189
    flake8<4
    mypy>=0.931
    pylint
    pytest>=6.1.0
    pytest-darker
    pytest-flake8>=1.0.6
    pytest-isort>=1.1.0
    pytest-kwparametrize>=0.0.3
    pytest-mypy
    pygments
    regex>=2021.4.4
    types-dataclasses ; python_version < "3.7"
    types-toml>=0.10.4

[flake8]
# Line length according to Black rules
max-line-length = 88
# Ignore rules which conflict with Black
ignore =
    # E231 missing whitespace after ','
    E231
    # W503 line break before binary operator
    W503
